final/src/parser.py
"""Parser for Go."""
from ply import yacc
from lexer import tokens, lexer, t_error, go_traceback
from go_classes import *

precedence = (
    ("left", "LSQBRACK"),
    ("left", "RSQBRACK"),
    ("left", "LCURLBR"),
    ("left", "RCURLBR"),
    ("left", "LBRACK"),
    ("left", "RBRACK"),
    ("left", "ID"),
    ("left", "SHDECL"),
    ("left", "COMMA"),
    ("left", "TRIDOT"),
    ("left", "DOT"),
    ("left", "SEMICOLON"),
    ("left", "COLON"),
    ("left", "NEWLINES"),
    ("left", "BREAK"),
    ("left", "CONTINUE"),
    ("left", "RETURN"),
    ("left", "INT"),
    ("left", "FLOAT"),
    ("left", "STRING"),
    ("right", "LOGOR"),
    ("right", "LOGAND"),
    ("left", "EQUALS", "NOTEQ"),
    ("left", "BITOR"),
    ("left", "BITXOR"),
    ("left", "BITAND", "BITCLR"),
    ("left", "LESS", "LESSEQ", "GREAT", "GREATEQ"),
    ("left", "LSHIFT", "RSHIFT"),
    ("left", "PLUS", "MINUS"),
    ("left", "MULT", "DIV", "MODULO"),
)

# =============================================================================
# BASIC
# =============================================================================


def p_start(p):
    "start : SourceFile"
    p[0] = p[1]


def p_empty(p):
    "empty :"


def p_error(p):
    t_error(p)

#XXX @harish Bug
def adjust_lineno(line_num):
    # returning so as to bypass the error 
    return 0

    while lexer.lines[line_num - 1].strip() == "" or lexer.lines[
        line_num - 1
    ].strip().startswith("//"):
        line_num -= 1
    return line_num


# =============================================================================
# TYPES
# =============================================================================


def p_Type(p):
    """Type : TypeLit
            | LBRACK ID RBRACK
            | LBRACK Type RBRACK
            | LBRACK ID DOT ID RBRACK
    """
    if len(p) == 2:  # TypeLit
        p[0] = p[1]
    elif len(p) == 4:  # Type or ID
        if isinstance(p[2], GoBaseType):  # Type
            p[0] = p[2]
        else:  # ID
            p[0] = GoType(p[2])
    else:  # ID DOT ID
        p[0] = GoFromModule(p[2], p[4])
        p[0].lineno = adjust_lineno(p.slice[2].lineno)


def p_TypeLit(p):
    """TypeLit : LiteralType
               | InterfaceType
               | PointerType
               | FunctionType
    """
    p[0] = p[1]


def p_ArrayType(p):
    """ArrayType : LSQBRACK ArrayLength RSQBRACK Type
                 | LSQBRACK ArrayLength RSQBRACK ID DOT ID
                 | LSQBRACK ArrayLength RSQBRACK ID
                 | LSQBRACK RSQBRACK Type
                 | LSQBRACK RSQBRACK ID DOT ID
                 | LSQBRACK RSQBRACK ID
    """
    if len(p) == 5:  # Type or ID
        if isinstance(p[4], GoBaseType):  # Type
            arr_type = p[4]
        else:  # ID
            arr_type = GoType(p[4])
        length = p[2]
    elif len(p) == 7:  # ID DOT ID
        arr_type = GoFromModule(p[4], p[6])
        arr_type.lineno = adjust_lineno(p.slice[4].lineno)
        length = p[2]
    elif len(p) == 4:
        if isinstance(p[3], GoBaseType):  # Type
            arr_type = p[3]
        else:  # ID
            arr_type = GoType(p[3])
        length = "variable"
    else:
        arr_type = GoFromModule(p[3], p[5])
        arr_type.lineno = adjust_lineno(p.slice[3].lineno)
        length = "variable"

    p[0] = GoArray(length, arr_type)
    p[0].lineno = adjust_lineno(p.slice[1].lineno)


def p_ArrayLength(p):
    """ArrayLength : Expression
    """
    p[0] = p[1]


def p_StructType(p):
    """StructType : STRUCT LCURLBR FieldDeclList RCURLBR
    """
    try:
        p[0] = GoStruct(p[3])
        p[0].lineno = adjust_lineno(p.slice[1].lineno)
    except ValueError as msg:
        position = go_traceback(p.slice[1])
        print("{} at position {}".format(msg, position))
        exit(1)


def p_FieldDecl(p):
    """FieldDecl : IdentifierList Type TagTop
                 | IdentifierList ID DOT ID TagTop
                 | IdentifierList ID TagTop
                 | ID Type TagTop
                 | ID ID DOT ID TagTop
                 | ID ID TagTop
                 | MULT ID DOT ID TagTop
                 | ID DOT ID TagTop
                 | MULT ID TagTop
                 | ID TagTop
    """
    tag = p[len(p) - 1]

    # Explicit field
    if len(p) in (4, 6):
        if len(p) == 4:
            if isinstance(p[2], GoBaseType):  # Type
                field_type = p[2]
            else:  # ID
                field_type = GoType(p[2])
        else:  # ID DOT ID
            field_type = GoFromModule(p[2], p[4])
            field_type.lineno = adjust_lineno(p.slice[2].lineno)
        if type(p[1]) is list:
            var_list = p[1]
        else:
            var_list = [p[1]]

    # Embedded field
    else:
        field_type = GoBaseType("embedded")
        if len(p) == 6:
            var_list = [GoDeref(GoFromModule(p[2], p[4]))]
            var_list[0].var.lineno = adjust_lineno(p.slice[2].lineno)
        elif len(p) == 5:
            var_list = [GoFromModule(p[1], p[3])]
            var_list[0].lineno = adjust_lineno(p.slice[1].lineno)
        elif len(p) == 4:
            var_list = [GoDeref(p[2])]
        else:
            var_list = [p[1]]

    p[0] = GoStructField(var_list, field_type, tag)


def p_FieldDeclList(p):
    """FieldDeclList : empty
                     | FieldDeclList FieldDecl SEMICOLON
    """
    if p[1] is None:  # empty
        p[0] = []
    else:
        p[0] = p[1] + [p[2]]


def p_TagTop(p):
    """TagTop : empty
              | STRING
    """
    if p[1] is None:  # empty
        p[0] = ""
    else:
        p[0] = p[1]


def p_PointerType(p):
    """PointerType : MULT Type
                   | MULT ID DOT ID
                   | MULT ID
    """
    if isinstance(p[2], GoBaseType):  # Type
        point_to = p[2]
    elif len(p) == 5:  # ID DOT ID
        point_to = GoFromModule(p[2], p[4])
        point_to.lineno = adjust_lineno(p.slice[2].lineno)
    else:  # ID
        point_to = GoType(p[2])
    p[0] = GoPointType(point_to)


def p_FunctionType(p):
    """FunctionType : FUNC Signature
    """
    p[0] = GoFuncType(*p[2])


def p_Signature(p):
    """Signature : Parameters
                 | Parameters Result
    """
    # First element is Parameters, second is Result
    if len(p) == 2:  # No result given
        p[0] = (p[1], None)
    else:
        p[0] = (p[1], p[2])


# XXX Parameters, TypeLit unimplemented during type checking
def p_Result(p):
    """Result : Parameters
              | TypeLit
              | ID DOT ID
              | ID
    """
    if type(p[1]) is list:  # Parameters
        p[0] = p[1]
    else:
        if isinstance(p[1], GoBaseType) or isinstance(
            p[1], GoFromModule
        ):  # Type
            dtype = p[1]
        elif len(p) == 4:  # ID DOT ID
            dtype = GoFromModule(p[1], p[3])
            dtype.lineno = adjust_lineno(p.slice[1].lineno)
        else:  # ID
            dtype = GoType(p[1])
        # p[0] = GoParam(dtype=dtype)
        p[0] = [GoParam(dtype=dtype)]


def p_Parameters(p):
    """Parameters : LBRACK RBRACK
                  | LBRACK ParameterList RBRACK
                  | LBRACK ParameterList COMMA RBRACK
    """
    if len(p) == 3:  # Nothing in there
        p[0] = []
    else:  # COMMA doesn't matter
        p[0] = p[2]


def p_ParameterList(p):
    """ParameterList : ParameterDecl
                     | ParameterList COMMA ParameterDecl
    """
    if len(p) == 2:  # Single ParameterDecl
        p[0] = [p[1]]
    else:
        p[0] = p[1] + [p[3]]


def p_ParameterDecl(p):
    """ParameterDecl : TRIDOT Type
                     | TRIDOT ID DOT ID
                     | TRIDOT ID
                     | ID TRIDOT Type
                     | ID TRIDOT ID DOT ID
                     | ID TRIDOT ID
                     | Type
                     | ID DOT ID
                     | ID
                     | ID Type
                     | ID ID DOT ID
                     | ID ID
    """
    # Remove support for variadic params
    new_p = []
    for item in p:
        if type(item) is not str or item != "...":
            new_p.append(item)

    if len(new_p) == 2 or len(new_p) == 4:  # only types given
        name = None
    else:  # ID given as name
        name = new_p[1]

    if isinstance(new_p[-1], GoBaseType):  # GoBaseType
        dtype = new_p[-1]
    elif len(new_p) > 3:  # ID DOT ID
        dtype = GoFromModule(new_p[-3], new_p[-1])
        dtype.lineno = adjust_lineno(p.slice[1].lineno)
    else:  # ID
        dtype = GoType(new_p[-1])

    p[0] = GoParam(name=name, dtype=dtype)


def p_InterfaceType(p):
    """InterfaceType : INTERFACE LCURLBR MethodSpecList RCURLBR
    """
    try:
        p[0] = GoInterfaceType(p[3])
    except ValueError as msg:
        position = go_traceback(p.slice[1])
        print("{} at position {}".format(msg, position))
        exit(1)


def p_MethodSpecList(p):
    """MethodSpecList : empty
                      | MethodSpecList MethodSpec SEMICOLON
    """
    if len(p) == 2:  # empty
        p[0] = []
    else:
        p[0] = p[1] + [p[2]]


def p_MethodSpec(p):
    """MethodSpec : ID Signature
                  | ID DOT ID
                  | ID
    """
    if len(p) == 3:  # Function signature given
        p[0] = GoMethodFunc(p[1], *p[2])
    elif len(p) == 4:  # ID DOT ID element
        p[0] = GoFromModule(p[1], p[3])
        p[0].lineno = adjust_lineno(p.slice[1].lineno)
    else:  # ID element
        p[0] = GoType(p[1])


# =============================================================================
# BLOCKS
# =============================================================================


def p_Block(p):
    """Block : LCURLBR StatementList RCURLBR
    """
    p[0] = GoBlock(p[2])
    p[0].lineno = adjust_lineno(p.slice[1].lineno)


def p_StatementList(p):
    """StatementList : Statement SEMICOLON StatementList
                     | empty
    """
    if len(p) == 2:  # emtpy
        p[0] = []
    else:
        p[0] = [p[1]] + p[3]


# =============================================================================
# DECLARATIONS AND SCOPE
# =============================================================================


def p_Declaration(p):
    """Declaration : ConstDecl
                   | TypeDecl
                   | VarDecl
    """
    p[0] = p[1]


def p_TopLevelDecl(p):
    """TopLevelDecl : Declaration
                    | FunctionDecl
                    | MethodDecl
    """
    p[0] = p[1]


def p_TopLevelDeclList(p):
    """TopLevelDeclList : TopLevelDecl SEMICOLON TopLevelDeclList
                        | empty
    """
    if len(p) == 2:  # empty
        p[0] = []
    else:
        p[0] = [p[1]] + p[3]


def p_ConstDecl(p):
    """ConstDecl  : CONST LBRACK ConstSpecList RBRACK
                  | CONST ConstSpec
                  | CONST ID
    """
    if len(p) == 3:  # Single constant spec
        if isinstance(p[2], GoConstSpec):  # ConstSpec
            declarations = [p[2]]
        else:  # ID
            declarations = [GoConstSpec(p[2])]
    else:  # List of constant specs
        declarations = p[3]
    p[0] = GoDecl("constant", declarations)
    p[0].lineno = adjust_lineno(p.slice[1].lineno)


def p_ConstSpec(p):
    """ConstSpec : IdentifierList
                 | IdentifierList Type ASSIGN ExpressionList
                 | IdentifierList ID DOT ID ASSIGN ExpressionList
                 | IdentifierList ID ASSIGN ExpressionList
                 | IdentifierList ASSIGN ExpressionList
                 | IdentifierList Type ASSIGN Expression
                 | IdentifierList ID DOT ID ASSIGN Expression
                 | IdentifierList ID ASSIGN Expression
                 | IdentifierList ASSIGN Expression
                 | ID Type ASSIGN ExpressionList
                 | ID ID DOT ID ASSIGN ExpressionList
                 | ID ID ASSIGN ExpressionList
                 | ID ASSIGN ExpressionList
                 | ID Type ASSIGN Expression
                 | ID ID DOT ID ASSIGN Expression
                 | ID ID ASSIGN Expression
                 | ID ASSIGN Expression
    """
    if len(p) == 2:  # Simply declaring constants
        p[0] = GoConstSpec(p[1])
        return

    if type(p[1]) is list:  # IdentifierList
        id_list = p[1]
    else:  # ID
        id_list = [p[1]]

    if isinstance(p[2], GoBaseType):  # Type
        dtype = p[2]
    elif len(p) == 7:  # ID DOT ID
        dtype = GoFromModule(p[2], p[4])
        dtype.lineno = adjust_lineno(p.slice[2].lineno)
    elif len(p) == 5:  # ID
        dtype = GoType(p[2])
    else:  # Type-less
        dtype = None

    if type(p[len(p) - 1]) is list:  # ExpressionList
        expressions = p[len(p) - 1]
    else:  # Expression
        expressions = [p[len(p) - 1]]

    p[0] = GoConstSpec(id_list, dtype, expressions)


def p_ConstSpecList(p):
    """ConstSpecList : empty
                     | ConstSpecList ConstSpec SEMICOLON
                     | ConstSpecList ID SEMICOLON
    """
    if len(p) == 2:
        p[0] = []
    else:
        if len(p) == 5:
            p[0] = p[1] + [p[2]]
        else:
            p[0] = p[1] + [GoConstSpec(p[2])]


def p_IdentifierList(p):
    """IdentifierList : ID IdentifierBotList
    """
    p[0] = [p[1]] + p[2]


def p_IdentifierBotList(p):
    """IdentifierBotList : COMMA ID
                         | IdentifierBotList COMMA ID
    """
    if len(p) == 3:  # Just COMMA ID
        p[0] = [p[2]]
    else:
        p[0] = p[1] + [p[3]]


def p_ExpressionList(p):
    """ExpressionList : Expression ExpressionBotList
    """
    p[0] = [p[1]] + p[2]


def p_TypeDecl(p):
    """TypeDecl : TYPE TypeSpecTopList
    """
    p[0] = GoDecl("type", p[2])
    p[0].lineno = adjust_lineno(p.slice[1].lineno)


def p_TypeSpec(p):
    """TypeSpec : AliasDecl
                | TypeDef
    """
    p[0] = p[1]


def p_TypeSpecList(p):
    """TypeSpecList : empty
                    | TypeSpecList TypeSpec SEMICOLON
    """
    if len(p) == 2:  # empty
        p[0] = []
    else:
        p[0] = p[1] + [p[2]]


def p_TypeSpecTopList(p):
    """TypeSpecTopList : TypeSpec
                       | LBRACK TypeSpecList  RBRACK
    """
    if len(p) == 2:  # single TypeSpec
        p[0] = [p[1]]
    else:
        p[0] = p[2]


def p_AliasDecl(p):
    """AliasDecl : ID ASSIGN Type
                 | ID ASSIGN ID DOT ID
                 | ID ASSIGN ID
    """
    if isinstance(p[3], GoBaseType):  # Type
        dtype = p[3]
    elif len(p) == 6:  # ID DOT ID
        dtype = GoFromModule(p[3], p[5])
        dtype.lineno = adjust_lineno(p.slice[3].lineno)
    else:  # ID
        dtype = GoType(p[3])
    p[0] = GoTypeDefAlias("alias", p[1], dtype)


def p_TypeDef(p):
    """TypeDef : ID Type
               | ID ID DOT ID
               | ID ID
    """
    if isinstance(p[2], GoBaseType):  # Type
        dtype = p[2]
    elif len(p) == 5:  # ID DOT ID
        dtype = GoFromModule(p[2], p[4])
        dtype.lineno = adjust_lineno(p.slice[2].lineno)
    else:  # ID
        dtype = GoType(p[2])
    p[0] = GoTypeDefAlias("typedef", p[1], dtype)


def p_VarDecl(p):
    """VarDecl : VAR VarSpecTopList
    """
    p[0] = GoDecl("var", p[2])
    p[0].lineno = adjust_lineno(p.slice[1].lineno)


def p_VarSpec(p):
    """VarSpec : IdentifierList Type VarSpecMid
               | IdentifierList ID DOT ID VarSpecMid
               | IdentifierList ID VarSpecMid
               | IdentifierList ASSIGN ExpressionList
               | IdentifierList ASSIGN Expression
               | ID Type VarSpecMid
               | ID ID DOT ID VarSpecMid
               | ID ID VarSpecMid
               | ID ASSIGN ExpressionList
               | ID ASSIGN Expression
    """
    if type(p[1]) is list:  # IdentifierList
        lhs = p[1]
    else:  # ID
        lhs = [p[1]]

    if type(p[len(p) - 1]) is list:  # VarSpecMid or ExpressionList
        rhs = p[len(p) - 1]
    else:  # Expression
        rhs = []

    if isinstance(p[2], GoBaseType):  # Type
        dtype = p[2]
    elif len(p) == 6:  # ID DOT ID
        dtype = GoFromModule(p[2], p[4])
        dtype.lineno = adjust_lineno(p.slice[2].lineno)
    elif type(p[2]) is str:  # ID
        dtype = GoType(p[2])
    else:  # No type given
        dtype = None

    p[0] = GoVarSpec(lhs, dtype, rhs)


def p_VarSpecMid(p):
    """VarSpecMid : empty
                  | ASSIGN ExpressionList
                  | ASSIGN Expression
    """
    if len(p) == 2:  # empty
        p[0] = []
    elif type(p[2]) is list:  # ExpressionList
        p[0] = p[2]
    else:  # Expression
        p[0] = [p[2]]


def p_VarSpecList(p):
    """VarSpecList : empty
                   | VarSpecList VarSpec SEMICOLON
    """
    if len(p) == 2:  # empty
        p[0] = []
    else:
        p[0] = p[1] + [p[2]]


def p_VarSpecTopList(p):
    """VarSpecTopList : VarSpec
                      | LBRACK VarSpecList RBRACK
    """
    if len(p) == 2:
        p[0] = [p[1]]
    else:
        p[0] = p[2]


def p_ShortVarDecl(p):
    """ShortVarDecl : ExpressionList SHDECL ExpressionList
                    | ExpressionList SHDECL Expression
                    | Expression SHDECL ExpressionList
                    | Expression SHDECL Expression
    """
    if type(p[1]) is list:  # IdentifierList
        id_list = p[1]
    else:
        id_list = [p[1]]

    if type(p[3]) is list:
        expressions = p[3]
    else:
        expressions = [p[3]]

    p[0] = GoShortDecl(id_list, expressions)
    p[0].lineno = adjust_lineno(p.slice[2].lineno)


def p_FunctionDecl(p):
    """FunctionDecl : FUNC FunctionName FunctionDeclTail
    """
    p[0] = GoFuncDecl(p[2], *p[3])
    p[0].lineno = adjust_lineno(p.slice[1].lineno)


def p_FunctionDeclTail(p):
    """FunctionDeclTail : Function
                        | Signature
    """
    if len(p[1]) == 3:  # Function is a tuple of (Parameters, Results, Body)
        p[0] = p[1]
    else:  # Signature is a tuple of (Parameters, Results)
        p[0] = (*p[1], GoBlock([]))


def p_FunctionName(p):
    """FunctionName : ID
    """
    p[0] = p[1]


def p_Function(p):
    """Function : Signature FunctionBody
    """
    # Signature is a tuple of (Parameters, Results)
    p[0] = (*p[1], p[2])


def p_FunctionBody(p):
    """FunctionBody : Block
    """
    p[0] = p[1]


def p_MethodDecl(p):
    """MethodDecl : FUNC Receiver ID FunctionDeclTail
    """
    # FunctionDeclTail is a tuple of (Parameters, Results, Body)
    p[0] = GoMethDecl(p[2], p[3], *p[4])
    p[0].lineno = adjust_lineno(p.slice[1].lineno)


def p_Receiver(p):
    """Receiver : Parameters
    """
    p[0] = p[1]


# =============================================================================
# EXPRESSIONS
# =============================================================================


def p_Operand(p):
    """Operand : Literal
               | MethodExpr
               | LBRACK Expression RBRACK
    """
    if len(p) == 2:  # Literal or MethodExpr
        p[0] = p[1]
    else:  # Expression
        p[0] = p[2]


def p_Literal(p):
    """Literal : BasicLit
               | FunctionLit
               | CompositeLit
    """
    p[0] = p[1]


def p_BasicLit(p):
    """BasicLit : INT
                | FLOAT
                | IMAG
                | STRING
                | RUNE
    """
    if p.slice[1].type == "INT":
        p[1] = int(p[1])
    elif p.slice[1].type == "FLOAT":
        p[1] = float(p[1])
    elif p.slice[1].type == "IMAG":
        p[1] = complex(p[1][:-1] + "j")

    dtype = p.slice[1].type.lower()
    if dtype == "imag":
        dtype = "complex"

    value = p.slice[1].value
    p[0] = GoBasicLit(p[1], GoType(dtype, True, value))
    p[0].lineno = adjust_lineno(p.slice[1].lineno)

